2010-02-03  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Config.swg common-src/conffile.c common-src/conffile.h:
	  add debug_recovery
	* perl/Amanda/Recovery/Clerk.pm: use it
	* perl/Amanda/Recovery/Planner.pm: use it

2010-02-03  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Recovery_Planner.pl: fix perl-5.6 bigint compat

2010-02-03  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/Makefile.am device-src/xfer-device.h
	  device-src/xfer-source-recovery.c device-src/xfer-source-taper.c
	  installcheck/Amanda_Xfer.pl perl/Amanda/Recovery/Clerk.pm
	  perl/Amanda/Xfer.pod perl/Amanda/XferServer.swg: rename
	  Amanda::Taper::Source to Amanda::Recovery::Source

2010-02-03  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am: check all .pm files (some had been missed)

2010-02-03  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm: fix bogus POD

2010-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Fix parsing of unc if disk is noti
				      defined.

2010-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Set $chg->{'chg_name'}

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amtape.8.xml: add a suggestion to use -otpchanger=

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amfetchdump.pl: only output a filename with a partnum
	  when -n was given

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: fix failure to check for fatal errors, use
	  signed 'delta'
	* device-src/tape-device.c: rewind correctly, even to the current file
	* device-src/vfs-device.c: set in_file=FALSE on finish()
	* installcheck/Amanda_Device.pl: check reading file header twice

2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl installcheck/Amanda_DB_Catalog.pl
	  installcheck/Amanda_Device.pl installcheck/Amanda_Recovery_Clerk.pl